--- a/cbench/templates/hpcc_hpcc.in
+++ b/cbench/templates/hpcc_hpcc.in
@@ -12,7 +12,7 @@ CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/HPCC_BIN_HERE"
 
 # need to make an isolated directory for each HPCC run to keep them
 # from stepping on each others hpccoutf.txt file
-TEMPDIR=`mktemp $PWD/hpcc.XXXXXX -d`
+TEMPDIR=`mktemp $PWD/hpcc.job$JOBID.XXXXXX -d`
 ln -s $TEMPDIR/hpccoutf.txt hpccoutf.txt.$JOBID
 cd $TEMPDIR
 ln -s ../hpccinf.txt .
